@@ -121,6 +121,11 @@ symbols).</td>
 <table>
 <tbody align="left" valign="top">
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3303018);return false;">3303018</a><br></td>
+<td>Filters with quotes in their name are now correctly exported, imported
+and displayed in the Manage Filters dialog.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3234204);return false;">3234204</a><br></td>
 <td>PasswordSafe no longer ends if the command flag is set to "-s &lt;databasename&gt;".</td>
 </tr>
