@@ -953,7 +953,7 @@ BEGIN
 END
 
 IDD_MANAGEFILTERS DIALOGEX 0, 0, 364, 212
-STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Manage Filters"
 FONT 8, "MS Sans Serif", 400, 0, 0x1
 BEGIN
